# Firework-Engine

./: .clang-format  .gitmodules  CMakeLists.txt  imgui.ini
.github/workflows/: c-cpp.yml
assets/: bundle_index.json  core_assetbundle.json
assets/core/materials/: testmat.json
assets/core/materials/shaders/: test.vert.glsl
assets/core/models/: cube.fbx  cyl.fbx  sphere.fbx
assets/core/textures/: test-albedo.tex.json
assets/materials/: testmat.json
assets/materials/shaders/: screen.frag.glsl  screen.fragment.glsl  screen.vert.glsl  test.fragment.glsl  test.vertex.glsl
assets/materials/textures/skybox/: cube.json
assets/models/: monkey.fbx  sphere.fbx  test.fbx  untitled.fbx
data/: scene-and-asset-data-storage.md
engine/: CMakeLists.txt
engine/include/: Version.hpp.in  ctpl_stl.h
engine/include/core/: Action.hpp  ActionQueue.hpp  Blueprint.hpp  Scene.hpp  TimeHelpers.hpp
engine/include/core/components/: Component.hpp  ComponentMaterial.hpp  ComponentMesh.hpp  ComponentMeshLoader.hpp  ComponentTransform.hpp  ComponentTypes.hpp
engine/include/core/entity/: Components.hpp
engine/include/core/io/: AssetBundle.hpp
engine/include/core/management/: AssetBundle.hpp  AssetManager.hpp  SceneManager.hpp
engine/include/core/manager/: AssetManager.hpp  SceneManager.hpp
engine/include/core/mesh/: Mesh.hpp
engine/include/core/misc/: Image.hpp  Material.hpp  Mesh.hpp  Texture.hpp
engine/include/core/objects/: Camera.hpp  Object.hpp  ObjectBasic.hpp  ObjectCamera.hpp  ObjectLight.hpp
engine/include/core/scene/: Scene.hpp
engine/include/input/: InputKeyboard.hpp  InputMouse.hpp  InputWindow.hpp  KeyCodes.hpp  Keymap.hpp
engine/include/io/binary/: BinaryBuffer.hpp
engine/include/render/: Action.hpp  CubeMap.hpp  Framebuffer.hpp  Material.hpp  MeshRenderer.hpp  QuadRenderer.hpp  RenderFlags.hpp  RenderPass.hpp  RenderServer.hpp  Renderer.hpp  RendererBase.hpp  RendererMesh.hpp  Shader.hpp  Texture.hpp  TextureConfig.hpp  Types.hpp
engine/include/render/ogl/: RenderBase.hpp  RenderDummy.hpp  RenderOpengl.hpp
engine/include/scripting/lua/: LuaScript.hpp  LuaState.hpp
engine/include/ui/: ImguiData.hpp  UIRoot.hpp
engine/include/ui/widget/: WidgetRect.hpp
engine/include/window/: RuntimeProperties.hpp  Window.hpp
engine/src/core/: Action.cpp  ActionQueue.cpp  Scene.cpp
engine/src/core/components/: Component.cpp  ComponentMaterial.cpp  ComponentMesh.cpp  ComponentMeshLoader.cpp  ComponentTransform.cpp
engine/src/core/entity/: Components.cpp
engine/src/core/io/: AssetBundle.cpp
engine/src/core/manager/: AssetManager.cpp  SceneManager.cpp
engine/src/core/mesh/: Mesh.cpp
engine/src/core/misc/: Image.cpp  Material.cpp  Mesh.cpp  Texture.cpp
engine/src/core/objects/: Camera.cpp  Object.cpp  ObjectBasic.cpp  ObjectCamera.cpp  ObjectLight.cpp
engine/src/core/objects/components/: Component.cpp
engine/src/core/scene/: Scene.cpp
engine/src/input/: InputKeyboard.cpp  InputMouse.cpp  InputWindow.cpp  Keymap.cpp
engine/src/io/binary/: BinaryBuffer.cpp
engine/src/render/: Action.cpp  CubeMap.cpp  Framebuffer.cpp  Material.cpp  MeshRenderer.cpp  QuadRenderer.cpp  RenderPass.cpp  RenderServer.cpp  Renderer.cpp  RendererMesh.cpp  Shader.cpp  Texture.cpp
engine/src/render/ogl/: RenderDummy.cpp  RenderOpengl.cpp
engine/src/scripting/lua/: LuaScript.cpp  LuaState.cpp
engine/src/ui/: ImguiData.cpp  UIIncludes.cpp
engine/src/window/: Window.cpp
glad/include/glad/: glad.h
glad/src/: glad.c
gunpowder/: CMakeLists.txt
gunpowder/src/: WindowMain.cpp  WindowMain.hpp  main.cpp
playground/: CMakeLists.txt
playground/src/: main.cpp
